Fixed overflow in profile page, and search icon in projects page

--- a/src/app/components/project-searchbar/project-searchbar.css
+++ b/src/app/components/project-searchbar/project-searchbar.css
@@ -19,8 +19,12 @@
 }
 
 .search-icon {
+  position: relative;
+  left: -.4rem;
+  top: -.1rem;
   width: 14px;
   height: 18px;
+  scale: 0.8;
   stroke-width: 2;
   color: var(--ink-muted);
   flex-shrink: 0;
